public interface Alive extends State{
    public String getName();
}
