public interface Dead extends State{
    public String getName();
}
