public interface State {
    public String getName();

}